Fri Oct 10 08:57:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Stack_Trace.cpp:
          Disable MSVC warning 4748 "/GS can not protect parameters
          and local variables from local buffer overrun because
          optimizations are disabled in function"

Thu Oct  9 21:52:18 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-common.h: Add ACE_HAS_ICMP_SUPPORT if Winsock 2
          is available.

        * tests/Network_Adapters_Test.{h cpp}: Removed extraneous ACE::init.
          Compare IP addresses using ACE_INET_Addr::is_ip_equal() instead of
          comparing get_ip_address() returns - this allows it to work with
          either IPv4 or IPv6.

Thu Oct  9 17:54:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        Added more WinCE6 support by integrating some changes from OCI.
        Mon Aug 11 15:40:37 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>
        * ace/config-win32-msvc-8.h:
        * ace/config-WinCE.h:
          WinCE 6.0 supports TSS and still does not support sig_atomic_t.

Wed Oct  8 21:06:42 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/Network_Adapters_Test.cpp: Extend the errno checks to correctly
          sense insufficient privs on AIX (EACCESS).

Wed Oct  8 20:57:24 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/Ping_Socket.cpp (send_echo_check): Fixed problem introduced in
          Tue Oct  7 23:04:50 UTC 2008  Steve Huston  <shuston@riverace.com>
          while setting the ICMP id.

        * tests/Network_Adapters_Test.cpp: If the test can't run due to
          insufficient privs, do ACE_END_TEST and return; don't exit. Want
          to avoid triggering a test fail in the scoreboard when the test
          can't be run.

Wed Oct  8 18:29:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Options.cpp
        * apps/gperf/src/Options.h
          Fixed ACE_TCHAR problems

        * apps/gperf/src/gperf.mpc